# origin

./: .gitignore
CMakeDemo/: CMakeLists.txt
Diplom-10/: CMakeLists.txt  config.ini
Diplom-10/common/: database.cpp  database.h  tokenizer.cpp  tokenizer.h
Diplom-10/indexer/: indexer.cpp  indexer.h  main_indexer.cpp
Lesson-3.10/Task-2/CMake_Exceptions/: 3.8.2_Exceptions_Constructors.cpp  CMakeLists.txt  Figure.cpp  FigureCreationExc.cpp  Quadrangle.cpp  Quadrangle_PrUg.cpp  Quadrangle_PrllGrmm.h  Romb.h  Triangle.cpp  Triangle_90deg.h  Triangle_equal2sides.cpp  Triangle_equalAllSides.cpp
Lesson-3.2/Task-1/: 3.2.1_Months.cpp
Lesson-3.2/Task-2/: 3.2.2_Accounts.cpp
Lesson-3.2/Task-3/: 3.2.3_Structure_Output.cpp
Lesson-3.3/Task-1/: 3.3.1_Calculator.cpp
Lesson-3.3/Task-2/: 3.3.2_Counter.cpp
Lesson-3.5/Task-1/: 3.5.1_Figures-number-of-edges.cpp
Lesson-3.5/Task-2/: 3.5.2_Figures-angles-edges.cpp
Lesson-3.5/Task-3/: 3.5.3_Figures-methods.cpp
Lesson-3.8/Task-1/: 3.8.1_Simple_exception.cpp
Lesson-3.8/Task-2/: Figure.h  FigureCreationExc.h  Quadrangle.h  Quadrangle_PrUg.h  Quadrangle_PrllGrmm.cpp  Romb.cpp  Square.cpp  Square.h  Triangle.h  Triangle_90deg.cpp  Triangle_equal2sides.h  Triangle_equalAllSides.h
Lesson-4.1/Task-2/: 4.1.2_Array_Search_binsearch.cpp
Lesson-4.2/Task-1/: 4.2.1_Fibonacci_alg.cpp
Lesson-4.2/Task-2/: 4.2.2_Fibonacci_faster_static_array.cpp
Lesson-4.3/Task-3/: 4.3.3_Count_sorting.cpp
Lesson-4.4/Task-1/: 4.4.1_DynamicArrayOutput.cpp
Lesson-4.4/Task-2/: 4.4.2_DynamicArrayAppend.cpp
Lesson-4.5/Task-1/: 4.5.1_Pyramide_output.cpp
Lesson-4.5/Task-2/: 4.5.2_HeapTraveling.cpp
Lesson-4.7/Task-1/: 4.7.1_GraphDepthTraveling.cpp
Lesson-4.8/Task-1/: 4.8.1_Orgraph_printing.cpp
Lesson-4.8/Task-2/: 4.8.2_Topologic_Sorting_Orgraph.cpp
Lesson-5.10/Task-1/: 5.10.1_Cloning_a_class_object.cpp
Lesson-5.11/Task-1/: 5.11.1_Object_moving.cpp
Lesson-5.11/Task-2/: 5.11.2_Rule_of_five_class.cpp
Lesson-5.3/Task-1/: 5.3.1_SmartArray.cpp
Lesson-5.3/Task-2/: 5.3.2_SmartArray_copying.cpp
Lesson-5.4/Task-1/: main.cpp
Lesson-5.4/Task-2/: main.cpp
Lesson-5.5/Task-1/: 5.5.1_Squaring.cpp
Lesson-5.5/Task-2/: 5.5.2_Table.cpp
Lesson-5.5/Task-3/: 5.5.3_Number_counter.cpp
Lesson-5.7/Task-1/: 5.7.1_Symbol_frequency.cpp
Lesson-5.7/Task-2/: 5.7.2_Duplicates_cleaning.cpp  5.7.2_Duplicates_deleting.cpp
Lesson-5.8/Task-1/: 5.8.1_Unique_vector.cpp
Lesson-5.8/Task-2/: 5.8.2_Print_container.cpp
Lesson-6.2/Task-1/: sql_task2.sql
Lesson-6.4/Task-1/: Task_6.4.1.sql
Lesson-6.4/Task-2_Task-3/: Task_6.4.2_6.4.3.sql
Lesson-6.5/Task-1/: CMakeLists.txt  main.cpp
Lesson-7.1/Task-1/: 7.1.1_Client_queue.cpp
Lesson-7.1/Task-2/: 7.1.2_Vector_sum.cpp
Lesson-7.2/Task-1/: 7.2.1_Atomic_client_counter.cpp
Lesson-7.2/Task-2/: 7.2.2_Progress_bar.cpp
Lesson-7.2/Task-3/: 7.2.3_Swap_function.cpp
Lesson-7.3/Task-1/: 7.3.1_Async_choice_sorting.cpp
Lesson-7.3/Task-2/: 7.3.2_For_each_async.cpp
Lesson-7.5/Task-1/: Dockerfile
Lesson-7.6/Task-1/: Test.cpp
Lesson-8.1/Task-1/: 8.1_Builder_pattern.cpp
Lesson-8.1/Task-2/: 8.2_Builder_pattern_enhanced.cpp
Lesson-8.2/Task-1/: 8.2.1_Decorator.cpp
Lesson-8.2/Task-2/: 8.2.2_Proxy.cpp
Lesson-8.3/Task-1/: 8.3.1_Command_pattern.cpp
Lesson-9.10/Task-1/: CMakeLists.txt  (+4 more)
Lesson-9.5/Task-1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
(+25 files in other folders)
